make title looks like link

--- a/style.less
+++ b/style.less
@@ -85,6 +85,10 @@ ul.day-list {
                         margin-left : 20px;
                     }
 
+                    &.title div:first-child {
+                        color : #369;
+                    }
+
                     &.title div:last-child {
                         font-weight : bold;
                     }
