make place list float:none

--- a/style.less
+++ b/style.less
@@ -31,7 +31,7 @@ img {
     }
 }
 
-ul.day-list , ul.place-list{
+ul.day-list, ul.place-list {
     list-style : none;
     overflow : auto;
     border-bottom : 1px solid gray;
@@ -58,14 +58,16 @@ ul.day-list , ul.place-list{
     }
 }
 
-ul.place-list li a {
-    display : none;
-}
 ul.place-list li {
-    font-size : 9px;
-    height : auto;
-    width : 24%;
+    width : 100%;
+    border-right : 0;
+    border-top : 1px dotted gray;
     text-align : center;
+    float : none;
+
+    &:first-child {
+        border-top : 0;
+    }
 }
 
 #contents {
